# fauji

./: .gitignore  CMakeLists.txt  README.md
include/: SimpleGameEngine.cpp  SimpleGameEngine.hpp
src/: main.cpp
